--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=research
-spring.datasource.url=jdbc:postgresql://localhost:5432/itauChallenge
+spring.datasource.url=jdbc:postgresql://localhost:5432/itauchallenge
 spring.datasource.username=eumsmfilip
-spring.datasource.password=45453429
+spring.datasource.password=Al@2019!
